# intervue

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  nginx.conf  package.json  pnpm-lock.yaml  render.yaml  turbo.json
.github/workflows/: ci.yml  deploy.yml
apps/web/: middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vercel.json
apps/web/__tests__/lib/: apiClient.test.ts  auth.test.ts  wsClient.test.ts
apps/web/app/: error.tsx  layout.tsx  not-found.tsx  page.tsx
apps/web/app/(auth)/: layout.tsx
apps/web/app/(auth)/login/: page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/interview/: page.tsx
apps/web/components/: ErrorBoundary.tsx  ResumeUpload.tsx
apps/web/components/audio/: Player.tsx  Recorder.tsx
apps/web/components/coding/: CodeEditor.tsx  CodingChallengeLayout.tsx  LanguageSelector.tsx  ProblemPanel.tsx  index.ts
apps/web/components/dashboard/: ScoreTrendChart.tsx  SessionHistoryTable.tsx  StrengthsChart.tsx  SummaryCards.tsx
apps/web/components/interview/: InterviewerCard.tsx  LatencyIndicator.tsx  ModeBadge.tsx  NotesPanel.tsx  ProgressLine.tsx  ResumeContextPanel.tsx  RoundList.tsx  RubricPanel.tsx  TabContainer.tsx  Transcript.tsx  VoiceControlDock.tsx
apps/web/lib/: AuthProvider.tsx  api.ts  apiClient.ts  auth.ts  rubricConfig.ts  useInterviewNotes.ts  useInterviewProgress.ts  wsClient.ts
apps/web/lib/audio/: encode.ts  streamPlayer.ts
apps/web/lib/types/: coding.ts  interview.ts
apps/web/styles/: globals.css
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_indexes.py
backend/app/: main.py
backend/app/core/: auth.py  config.py  database.py  redis.py
backend/app/models/: __init__.py  base.py  evaluation.py  resume.py  session.py  transcript.py  user.py
backend/app/prompts/: evaluator.py  question_generator.py  resume_parser.py  scorecard.py
backend/app/routers/: auth.py  interview_ws.py  resumes.py  sessions.py
backend/app/schemas/: auth.py  resume.py  session.py
backend/app/services/: evaluator.py  interview_engine.py  llm.py  question_generator.py  resume_parser.py
backend/app/services/speech/: stt.py  tts.py
docs/: AI_PROMPTS.md  API.md  ARCHITECTURE.md  CODING_CHALLENGE.md  DEVELOPMENT.md  FEATURES.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/audio/: AudioRecorder.tsx  VoiceIndicator.tsx
frontend/src/components/interview/: ControlBar.tsx  InterviewerAvatar.tsx  TranscriptView.tsx
frontend/src/components/resume/: ResumeUpload.tsx
frontend/src/hooks/: useAuth.tsx  useInterview.ts  useWebSocket.ts
frontend/src/lib/: api.ts  ws.ts
frontend/src/pages/: Dashboard.tsx  Interview.tsx  Landing.tsx  Login.tsx  Scorecard.tsx
frontend/src/types/: index.ts
infra/k8s/: api.yaml  configmap.yaml  ingress.yaml  namespace.yaml  web.yaml  worker.yaml
infra/postgres/: init.sql
scripts/: dev.sh
services/api/: Dockerfile  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 001_initial_schema.py  002_add_users_table.py
services/api/app/: main.py
services/api/app/core/: config.py  deps.py  logging.py  security.py
services/api/app/db/: base.py  session.py
services/api/app/models/: __init__.py  code_submission.py  evaluation.py  interview_session.py  transcript.py  user.py
services/api/app/routers/: __init__.py  auth.py  dashboard.py  resume.py  sessions.py  ws_interview.py
services/api/app/schemas/: auth.py  coding.py  resume.py  ws_messages.py
services/api/app/services/coding/: __init__.py  code_evaluator.py  problem_bank.py  problem_selector.py  sandbox_executor.py
services/api/app/services/llm/: client.py
services/api/app/services/orchestrator/: evaluator.py  prompts.py  state.py  streaming_pipeline.py
services/api/app/services/persistence/: session_repo.py
services/api/app/services/resume/: __init__.py  parser.py
services/api/app/services/speech/: audio_utils.py  sentence_buffer.py  stt_deepgram.py  stt_whisper.py  tts_client.py  tts_elevenlabs.py
services/api/app/tests/: conftest.py
services/api/app/tests/integration/: test_auth_flow.py  test_concurrency.py  test_dashboard.py  test_edge_cases.py  test_health.py  test_resume.py  test_security.py  test_session_repo.py  test_sessions.py  test_ws_interview.py
services/api/app/tests/stress/: test_load.py
services/api/app/tests/unit/: test_config.py  test_models.py  test_sandbox_limits.py  test_schemas.py  test_security.py  test_session_state.py
services/sandbox/: Dockerfile.java  Dockerfile.node  Dockerfile.python
services/sandbox/runner/: run_java.sh  run_node.sh  run_python.sh
services/worker/: Dockerfile  pyproject.toml
services/worker/worker/: main.py
services/worker/worker/sandbox/: docker_runner.py  limits.py
services/worker/worker/tasks/: run_code.py
(+8 files in other folders)
