[project]
name = "intervue-api"
version = "0.1.0"
description = "Voice interview API service"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # AI/ML
    "openai>=1.12.0",
    "anthropic>=0.18.0",

    # Streaming Speech Services
    "deepgram-sdk>=3.0.0",
    "elevenlabs>=1.0.0",

    # Validation & Settings
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Audio processing
    "pydub>=0.25.1",

    # Redis
    "redis>=5.0.0",

    # Utilities
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",

    # Rate limiting
    "slowapi>=0.1.9",

    # Authentication
    "PyJWT>=2.8.0",
    "bcrypt>=4.1.0",
    "pydantic[email]>=2.5.0",

    # PDF processing
    "pdfplumber>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "anyio>=4.0.0",
    "httpx-ws>=0.5.0",
    "aiosqlite>=0.19.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C"]
ignore = [
    "B008",   # Depends() in function defaults — standard FastAPI pattern
]

[tool.ruff.lint.per-file-ignores]
"app/main.py" = ["E402"]
"app/routers/ws_interview.py" = ["C901"]
"app/schemas/resume.py" = ["E501", "C901"]
"app/schemas/ws_messages.py" = ["E501"]
"app/services/coding/code_evaluator.py" = ["E501", "C901"]
"app/services/coding/problem_bank.py" = ["E501"]
"app/services/orchestrator/evaluator.py" = ["E501", "C901"]
"app/services/orchestrator/prompts.py" = ["E501"]
"app/services/orchestrator/streaming_pipeline.py" = ["C901"]
"app/services/resume/parser.py" = ["E501"]
"app/tests/**/*.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]

[tool.mypy]
python_version = "3.11"
explicit_package_bases = true
mypy_path = "."

[[tool.mypy.overrides]]
module = [
    "app.services.resume.parser",
    "app.services.llm.client",
    "app.services.coding.code_evaluator",
    "app.services.orchestrator.streaming_pipeline",
    "app.main",
]
ignore_errors = true
