[project]
name = "intervue-worker"
version = "0.1.0"
description = "Background worker for code execution"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.0.0",
    "redis>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worker"]
